--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,5 +21,43 @@
 .slider{
   width: 80vw;
   margin: auto;
-
+}
+.imageGrid{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 50px;
+  padding: 20px;
+  margin: 2rem;
+}
+.imageCard{
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+}
+.image-comp{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.imageCard:hover{
+  transform: scale(1.03);
+  transition: transform 0.5s ease-in-out;
+}
+.modal-content{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2000;
+  width: 250px;
+  height: 250px;
+  background-color: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (max-width:250){
+  .contactForm{
+  flex-direction: column;
+}
 }
